packages/error/test/helpers/index.ts
export * from './inherited-error';
export * from './throw-error';
export * from './throw-inherited-error';
